--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vertex-nextjs-starter",
+  "name": "collaboration-demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,7 +15,9 @@
     "react": "^17.0",
     "react-dom": "^17.0",
     "react-hotkeys-hook": "^3.4",
-    "yarn": "^1.22.11"
+    "y-webrtc": "^10.2.0",
+    "yarn": "^1.22.11",
+    "yjs": "^13.5.12"
   },
   "devDependencies": {
     "@babel/core": "^7.15",
