--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@material-ui/icons": "^5.0.0-beta.5",
     "@vertexvis/api-client-node": "^0.14",
     "@vertexvis/viewer-react": "^0.10",
+    "fast-deep-equal": "^3.1.3",
     "next": "^11.1",
     "react": "^17.0",
     "react-dom": "^17.0",
-    "react-hotkeys-hook": "^3.4",
     "y-webrtc": "^10.2.0",
     "yjs": "^13.5.12"
   },
