--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@emotion/react": "^11.4",
     "@emotion/server": "^11.4",
     "@emotion/styled": "^11.3",
-    "@material-ui/core": "^5.0.0-beta.5",
-    "@material-ui/icons": "^5.0.0-beta.5",
+    "@mui/material": "^5.0.0-rc.1",
+    "@mui/icons-material": "^5.0.0-rc.1",
     "@vertexvis/api-client-node": "^0.14",
-    "@vertexvis/viewer-react": "^0.10",
+    "@vertexvis/ui-react": "0.0.10-canary.25",
+    "@vertexvis/viewer-react": "^0.10.2-canary.7",
     "fast-deep-equal": "^3.1.3",
     "next": "^11.1",
     "react": "^17.0",
