--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^11.1",
     "react": "^17.0",
     "react-dom": "^17.0",
+    "react-hotkeys-hook": "^3.4.0",
     "y-webrtc": "^10.2.0",
     "yjs": "^13.5.12"
   },
