--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@emotion/react": "^11.4",
     "@emotion/server": "^11.4",
     "@emotion/styled": "^11.3",
-    "@mui/icons-material": "^5.0.0-rc.1",
-    "@mui/material": "^5.0.0-rc.1",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/material": "^5.0.0",
     "@vertexvis/api-client-node": "^0.14",
-    "@vertexvis/ui-react": "0.0.10-canary.25",
+    "@vertexvis/ui-react": "0.0.10",
     "@vertexvis/viewer-react": "^0.10.2-canary.7",
     "fast-deep-equal": "^3.1.3",
     "next": "^11.1",
