--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.0",
     "@mui/material": "^5.0",
     "@react-hook/mouse-position": "^4.1",
+    "@react-hook/throttle": "^2.2.0",
     "@vertexvis/api-client-node": "^0.15",
     "@vertexvis/ui-react": "0.0.10",
     "@vertexvis/viewer-react": "^0.11.1-canary.0",
