--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0",
     "react-dom": "^17.0",
     "react-hotkeys-hook": "^3.4",
+    "y-protocols": "^1.0.5",
     "y-webrtc": "^10.2",
     "yjs": "^13.5"
   },
