--- a/package.json
+++ b/package.json
@@ -3,39 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/cache": "^11.5",
-    "@emotion/react": "^11.5",
+    "@emotion/cache": "^11.6",
+    "@emotion/react": "^11.7",
     "@emotion/server": "^11.4",
-    "@emotion/styled": "^11.3",
-    "@mui/icons-material": "^5.0",
-    "@mui/material": "^5.0",
+    "@emotion/styled": "^11.6",
+    "@mui/icons-material": "^5.2",
+    "@mui/material": "^5.2",
     "@react-hook/mouse-position": "^4.1",
     "@react-hook/throttle": "^2.2.0",
     "@vertexvis/api-client-node": "^0.15",
     "@vertexvis/ui-react": "0.0.10",
-    "@vertexvis/viewer-react": "^0.11.1-canary.0",
+    "@vertexvis/viewer-react": "^0.12.0-canary.21",
     "fast-deep-equal": "^3.1",
-    "next": "^11.1",
-    "react": "^17.0",
-    "react-dom": "^17.0",
+    "next": "^12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hotkeys-hook": "^3.4",
     "y-protocols": "^1.0.5",
     "y-webrtc": "^10.2",
     "yjs": "^13.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.15",
+    "@babel/core": "^7.16",
     "@types/node": "^16",
     "@types/react": "^17.0",
     "@types/react-dom": "^17.0",
-    "@typescript-eslint/eslint-plugin": "^4",
-    "@typescript-eslint/parser": "^4",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
     "babel-plugin-import": "^1.13",
-    "eslint": "^7",
-    "eslint-config-next": "^11.1",
+    "eslint": "<8.0.0",
+    "eslint-config-next": "^12.0",
     "eslint-config-prettier": "^8",
     "eslint-plugin-simple-import-sort": "^7.0",
-    "prettier": "^2.4",
+    "prettier": "^2.5",
     "tslib": "^2.3",
     "typescript": "^4"
   },
