--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@react-hook/mouse-position": "^4.1",
     "@react-hook/throttle": "^2.2.0",
     "@vertexvis/api-client-node": "^0.20.3",
-    "@vertexvis/ui-react": "0.0.11",
-    "@vertexvis/viewer-react": "^0.13.1",
+    "@vertexvis/ui-react": "^0.0.12",
+    "@vertexvis/viewer-react": "^0.15.1",
     "fast-deep-equal": "^3.1",
     "next": "^12.3.0",
     "react": "^17.0.2",
