Dependency updates and temporary signaling server

--- a/package.json
+++ b/package.json
@@ -12,27 +12,28 @@
     "@react-hook/mouse-position": "^4.1",
     "@react-hook/throttle": "^2.2.0",
     "@vertexvis/api-client-node": "^0.22.2",
-    "@vertexvis/ui-react": "^0.0.13",
-    "@vertexvis/viewer-react": "^0.19.2",
+    "@vertexvis/ui-react": "^0.0.14",
+    "@vertexvis/viewer": "^0.20.3",
+    "@vertexvis/viewer-react": "^0.20.3",
     "fast-deep-equal": "^3.1",
-    "next": "^12.3.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "13",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^3.4.7",
     "y-protocols": "^1.0.6",
     "y-webrtc": "^10.2.6",
-    "yjs": "^13.5"
+    "yjs": "^13.6.14"
   },
   "devDependencies": {
     "@babel/core": "^7.16",
     "@types/node": "^16",
-    "@types/react": "^17.0",
-    "@types/react-dom": "^17.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "babel-plugin-import": "^1.13",
     "eslint": "<8.0.0",
-    "eslint-config-next": "^12.0",
+    "eslint-config-next": "13",
     "eslint-config-prettier": "^8",
     "eslint-plugin-simple-import-sort": "^7.0",
     "prettier": "^2.5",
