--- a/package.json
+++ b/package.json
@@ -3,31 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.3",
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.10.8",
-    "@mui/icons-material": "^5.15.0",
-    "@mui/material": "^5.15.2",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^5.18.0",
+    "@mui/material": "^5.18.0",
     "@react-hook/mouse-position": "^4.1",
     "@react-hook/throttle": "^2.2.0",
-    "@vertexvis/api-client-node": "^0.23.0",
+    "@vertexvis/api-client-node": "^0.34.0",
     "@vertexvis/ui-react": "^0.0.13",
     "@vertexvis/viewer-react": "^0.22.0",
     "fast-deep-equal": "^3.1",
-    "next": "^12.3.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "next": "^14.2.33",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hotkeys-hook": "^3.4.7",
     "y-protocols": "^1.0.6",
     "y-webrtc": "^10.2.6",
     "yjs": "^13.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.16",
+    "@babel/core": "^7.28.5",
     "@types/node": "^16",
-    "@types/react": "^17.0",
-    "@types/react-dom": "^17.0",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "babel-plugin-import": "^1.13",
@@ -38,6 +38,14 @@
     "prettier": "^2.5",
     "tslib": "^2.3",
     "typescript": "^4"
+  },
+  "resolutions": {
+    "cross-spawn": "^7.0.5",
+    "html-tokenize": "^2.0.1",
+    "json5": "^2.2.2",
+    "minimatch": "^3.0.5",
+    "semver": "^7.5.2",
+    "word-wrap": "^1.2.4"
   },
   "scripts": {
     "build": "next build",
