--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@vertexvis/ui-react": "^0.0.13",
     "@vertexvis/viewer-react": "^0.22.0",
     "fast-deep-equal": "^3.1",
-    "next": "^14.2.33",
+    "next": "^14.2.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hotkeys-hook": "^3.4.7",
@@ -40,6 +40,7 @@
     "typescript": "^4"
   },
   "resolutions": {
+    "ajv": "^8.18.0",
     "cross-spawn": "^7.0.5",
     "html-tokenize": "^2.0.1",
     "json5": "^2.2.2",
